--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,22 @@
             <version>3.2.5</version>
         </dependency>
         <dependency>
+            <groupId>com.formdev</groupId>
+            <artifactId>flatlaf-extras</artifactId>
+            <version>3.2.5</version>
+        </dependency>
+        <dependency>
+            <groupId>com.miglayout</groupId>
+            <artifactId>miglayout-swing</artifactId>
+            <version>11.2</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>com.formdev</groupId>
+            <artifactId>flatlaf-fonts-roboto</artifactId>
+            <version>2.137</version>
+        </dependency>
+        <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <version>42.6.0</version>
@@ -38,4 +54,5 @@
         <maven.compiler.target>20</maven.compiler.target>
         <exec.mainClass>com.pbo.projectspoti.ProjectSpoti</exec.mainClass>
     </properties>
+    <name>projectSpoti_baru</name>
 </project>
